# fixmate-mvp

./: .gitignore  README.md  upsertion_script_2_databases
BACKEND/: .env.example  pyproject.toml  requirements.txt
BACKEND/app/: config.py  db.py  dependencies.py  main.py  models.py  openai_client.py  utils.py
BACKEND/app/routers/: chat.py  images.py  meta.py  sessions.py
BACKEND/app/services/: guardrails.py  rag_pipeline.py  retrieval.py  tracing.py
BACKEND/tests/: test_guardrails.py
Evaluation/: .env.example  README.md  pyproject.toml  ragas_eval.py  testset.jsonl
FRONTEND/: .env.local.example  Makefile
FRONTEND/my-app/: components.json  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
FRONTEND/my-app/app/: globals.css  layout.tsx  page.module.css  page.tsx
FRONTEND/my-app/app/chat/: layout.tsx  page.tsx
FRONTEND/my-app/components/: AssistantMessage.tsx  ChatInput.tsx  ChatInterface.tsx  ChatWindow.tsx  Controls.tsx  Features.tsx  HeaderBar.tsx  HeroSection.tsx  ImageGallery.tsx  Sidebar.tsx  content-1.tsx  features-2.tsx  footer.tsx  header.tsx  hero-section.tsx  pricing.tsx  team.tsx
FRONTEND/my-app/components/ui/: input.tsx
FRONTEND/my-app/context/: ChatContext.tsx
FRONTEND/my-app/lib/: api.ts  types.ts
UPSERTION-SCRIPT/: V555_UPSERT_2_DATABASES_juke.ipynb
