[project]
name = "fixmate-backend"
version = "0.1.0"
description = "FixMate FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "certifi",
    "fastapi",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langdetect",
    "langsmith>=0.8.9",
    "openai",
    "Pillow",
    "pinecone",
    "pymongo[srv]==3.11",
    "python-dotenv",
    "sse-starlette",
    "uvicorn[standard]",
]

[tool.uv]
package = false
