[project]
name = "fixmate-evaluation"
version = "0.1.0"
description = "Isolated RAGAS evaluation project for FixMate"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=2.19,<4",
    "langchain<0.4",
    "langchain-community<0.4",
    "langchain-core<1.0",
    "langchain-openai<0.4",
    "pandas>=2.2,<3",
    "python-dotenv>=1.0",
    "ragas==0.2.15",
    "requests>=2.32",
]

[tool.uv]
package = false
